# accounting-backend

./: .env.example  Accounting_uwsgi.ini  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
account/: serializers.py  urls.py  views.py
account/tests/: test_accounting_api.py  test_category_api.py  test_setting_target.py
accounting/: settings.py  urls.py
charts/: urls.py  views.py
charts/tests/: test.py
core/: admin.py  models.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_user_is_staff.py  0003_accounting.py  0004_alter_accounting_type_category_accounting_category.py  0005_accounting_description_accounting_title.py  0006_savemoneytarget_monthtarget.py  0007_savemoneytarget_category.py  0008_alter_savemoneytarget_category.py  0009_savemoneytarget_end_date_savemoneytarget_from_date.py  0010_alter_savemoneytarget_end_date_and_more.py
core/tests/: test_admin.py  test_commands.py  test_models.py
dev/: urls.py  views.py
mysql/: init.sql
reports/: urls.py  views.py
reports/tests/: test_reports.py
user/: serializers.py  urls.py  views.py
user/tests/: test_user_api.py
