[tool.poetry]
name = "accounting-backend"
version = "0.1.0"
description = ""
authors = ["Ryan Lee <lee98064@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-environ = "^0.11.2"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
