[tool.poetry]
name = "accounting-backend"
version = "0.1.0"
description = ""
authors = ["Ryan Lee <lee98064@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-environ = "^0.11.2"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.7"
django-sslserver = "^0.22"
boto3 = "^1.34.7"
g4f = "^0.1.9.6"
uwsgi = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
